--- a/style.css
+++ b/style.css
@@ -23,29 +23,101 @@ body {
     grid-auto-flow: row;
 }
 
+/* Header CSS */
 .header {
+    padding: 1rem 1.5rem 1.8rem 2rem;
     background-color: white;
+    box-shadow: 0 2px 3px 3px #CCD1D9;
+    z-index: 1;
+
     display: grid;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 2fr minmax(400px, 1fr);
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "search account"
                          "hi blueButtons";
-}
 
-.search {
-    grid-area: search;
+    /* TOP LEFT SEARCH BAR */
+    >.search {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        grid-area: search;
+        >#searchField {
+            margin-left: 1rem;
+            height: 1.8rem;
+            width: 70%;
+            border-radius: 20px;
+            border: 0;
+            background-color: #E2E8F0;
+        }
+    }
+
+    /* TOP RIGHT BELL ICON PROFILE PIC & NAME */
+    >.account {
+        grid-area: account;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        
+        >#miniProfilePic {
+            height: 48px;
+            width: 48px;
+        }
+
+        >#bell {
+            height: 24px;
+            width: 24px;
+        }
+    }
+    /* BOTTOM LEFT PROFILE PIC & GREETING */
+    >.hi {
+        margin-top: 1rem;
+        grid-area: hi;
+        display: grid;
+        grid-template-columns: 90px 1fr;
+        grid-template-rows: 1.5rem 1.5rem;
+        align-items: center;
+
+        >#greetedName {
+            font-size: 1.3rem;
+        }
+
+        >#profilePic {
+            grid-row: 1/3;
+        }
+    }
+    /* BOTTOM RIGHT 3 BLUE BUTTONS */
+    .blueButtons {
+        grid-area: blueButtons;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        align-items: flex-end;
+        >.blue {
+            width: 7rem;
+            height: 2.4rem;
+            
+            border: 0;
+            background-color: #1992D4;
+            border-radius: 20px;
+            color: #E2E8F0;
+            font-size: 1rem;
+        }
+    }
 }
-.account {
-    grid-area: account;
+/* Main Cards CSS */
+.card {
+    padding: 2rem;
 }
-.hi {
-    grid-area: hi;
-}
-.blueButtons {
-    grid-area: blueButtons;
-}
+.cardIcon {
+    height: 24px;
+    width: 24px;
+}   
 
 .main {
+    padding: 1rem;
     background-color: #E2E8F0;
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -77,7 +149,8 @@ body {
 .sidebar {
     background-color: #1992D4;
     grid-area: 1/1/3/2;
-
+    z-index: 2;
+    
     >.logo{
         display: flex;
         flex-direction: row;
@@ -111,12 +184,4 @@ body {
 }
 #logoImg {
    margin-right: 1rem;
-}
-/* Main Cards CSS */
-.card {
-    padding: 2rem;
-}
-.cardIcon {
-    height: 24px;
-    width: 24px;
 }
